--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -5,11 +5,11 @@
     android:layout_height="match_parent"
     tools:context=".ui.main.category.CategoryFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:gravity="center"
+    <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="CATEGORY" />
+        android:id="@+id/recycler_category"
+
+        />
 
 </FrameLayout>
